Added new 2 buttons and ability to log out and replies java.util.Collections to java.util.List which makes code more readeble.